Fix: Adjust font-size on mobile for h1 on pages.

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,11 @@
   color: #fff;
   font-size: 100px;
 }
+
+@media screen and (max-width: 820px) {
+  .products,
+  .services,
+  .sign-up {
+    font-size: 50px;
+  }
+}
